Fixed some vertical alignment bugs

--- a/src/assets/stylesheets/scss/components/_grid.scss
+++ b/src/assets/stylesheets/scss/components/_grid.scss
@@ -44,6 +44,12 @@
         justify-content: center;
         align-items: flex-start;
         // align-items: stretch;
+        >* {
+            width: 100%;
+        }
+        img {
+            width: auto;
+        }
     }
 }
   
